force-app/main/default/objects/Passenger__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>