force-app/main/default/objects/Passenger__c/fields/Assigned_Seat__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Seat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether this passenger has been assigned with booking seat or accepted seat</description>
    <label>Assigned Seat</label>
    <type>Checkbox</type>
</CustomField>