force-app/main/default/objects/Passenger__c/fields/Board_Point__c.field-meta.xml
<CustomField>
    <fullName>Board_Point__c</fullName>
    <description>Board point of this passenger</description>
    <label>Board Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>