force-app/main/default/objects/Passenger__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <description>Booking class of the passenger which could be any value from A-Z depending on the ticket and the reservation of the passenger</description>
    <label>Booking Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>