force-app/main/default/objects/Passenger__c/fields/Booking_Seat__c.field-meta.xml
<CustomField>
    <fullName>Booking_Seat__c</fullName>
    <description>The seat that has been booked by the passenger since the reservation was placed</description>
    <label>Booking Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>