force-app/main/default/objects/Passenger__c/fields/Cabin_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Class_Description__c</fullName>
    <description>The full name of the Cabin Class which are</description>
    <formula>CASE( Cabin_Code__c ,
"F", "Royal First",
"C", "Royal Silk",
"U", "Premium Economy",
"Y", "Economy",
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabin Class Description</label>
    <type>Text</type>
</CustomField>