force-app/main/default/objects/Passenger__c/fields/Cabin_Code__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Code__c</fullName>
    <description>Cabin class of the passenger which could be F, Y, U, or C.</description>
    <label>Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>