force-app/main/default/objects/Passenger__c/fields/Cabin_Code_F__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Code_F__c</fullName>
    <formula>CASE( Cabin_Code__c , "F", "First", "C", "Business", "Y", "Economy", "U", "Premium Economy", "")</formula>
    <label>Cabin Class Full Name</label>
    <type>Text</type>
</CustomField>