force-app/main/default/objects/Passenger__c/fields/Change_Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>Change_Cabin_Class__c</fullName>
    <description>Cabin Code changed to</description>
    <label>Change Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>