force-app/main/default/objects/Passenger__c/fields/Change_Seat__c.field-meta.xml
<CustomField>
    <fullName>Change_Seat__c</fullName>
    <label>Change Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>