force-app/main/default/objects/Passenger__c/fields/Checkin_Seat__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Seat__c</fullName>
    <description>The seat that will be assigned after the passenger has checked in</description>
    <label>Accepted Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>