force-app/main/default/objects/Passenger__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Used for display</description>
    <label>Travel Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>