force-app/main/default/objects/Passenger__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <formula>CASE(  RBD_Travel_Class__c  , "F", "1", "C", "2","U","3","Y","4","G","5", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class of Service</label>
    <type>Text</type>
</CustomField>