force-app/main/default/objects/Passenger__c/fields/Connecting_Date__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Date__c</fullName>
    <label>Connecting Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>