force-app/main/default/objects/Passenger__c/fields/Connecting_Flight__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Flight__c</fullName>
    <label>Connecting Flight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>