force-app/main/default/objects/Passenger__c/fields/Connecting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Segment__c</fullName>
    <label>Connecting Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>