force-app/main/default/objects/Passenger__c/fields/Connecting_STD__c.field-meta.xml
<CustomField>
    <fullName>Connecting_STD__c</fullName>
    <label>Connecting STD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>