force-app/main/default/objects/Passenger__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>