force-app/main/default/objects/Passenger__c/fields/Date_of_Birth_Display__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Display__c</fullName>
    <description>Used for input.</description>
    <formula>Date_of_Birth_Input__c</formula>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>