force-app/main/default/objects/Passenger__c/fields/Date_of_Birth_Input__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Input__c</fullName>
    <label>Date of  Birth</label>
    <type>Date</type>
</CustomField>