force-app/main/default/objects/Passenger__c/fields/Doc_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Doc_Issuing_Country__c</fullName>
    <label>Doc Issuing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>