force-app/main/default/objects/Passenger__c/fields/Eligible_for_Upgrade_Seat__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Upgrade_Seat__c</fullName>
    <label>Eligible for Upgrade Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>