force-app/main/default/objects/Passenger__c/fields/Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Date__c</fullName>
    <label>Enroll Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>