force-app/main/default/objects/Passenger__c/fields/Enroll_Source__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Source__c</fullName>
    <label>Enroll Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>