force-app/main/default/objects/Passenger__c/fields/FFP__c.field-meta.xml
<CustomField>
    <fullName>FFP__c</fullName>
    <description>Display : FFP_Carrier__c-FFP_Number__c, Example TG-ZD95870</description>
    <formula>FFP_Carrier__c + '-' +  FFP_Number__c</formula>
    <label>FFP</label>
    <type>Text</type>
</CustomField>