force-app/main/default/objects/Passenger__c/fields/FFP_Carrier__c.field-meta.xml
<CustomField>
    <fullName>FFP_Carrier__c</fullName>
    <label>FFP Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>