force-app/main/default/objects/Passenger__c/fields/FFP_Number__c.field-meta.xml
<CustomField>
    <fullName>FFP_Number__c</fullName>
    <description>Used for display</description>
    <label>FFP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>