force-app/main/default/objects/Passenger__c/fields/FFP_Tier__c.field-meta.xml
<CustomField>
    <fullName>FFP_Tier__c</fullName>
    <description>Used for display</description>
    <label>FFP Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>