force-app/main/default/objects/Passenger__c/fields/FFP_Tier_WS__c.field-meta.xml
<CustomField>
    <fullName>FFP_Tier_WS__c</fullName>
    <description>Data of FFP Tier from Web Service without conversion</description>
    <label>FFP Tier WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>