force-app/main/default/objects/Passenger__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Used for display</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>