force-app/main/default/objects/Passenger__c/fields/First_Section__c.field-meta.xml
<CustomField>
    <fullName>First_Section__c</fullName>
    <description>User for report</description>
    <formula>IF(
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
)
>= 500 &amp;&amp;
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
) &lt;= 1200

, TRUE,FALSE)</formula>
    <label>First Section</label>
    <type>Checkbox</type>
</CustomField>