force-app/main/default/objects/Passenger__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <description>Flight Date local time</description>
    <label>Flight Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>