force-app/main/default/objects/Passenger__c/fields/Flight_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Date__c</fullName>
    <formula>DATEVALUE( Flight_Date__c )</formula>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>