force-app/main/default/objects/Passenger__c/fields/Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_UTC__c</fullName>
    <description>Used for verifying result of PaxFlowDetail_Batch</description>
    <formula>FlightId__r.Flight_Date_UTC_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Date UTC</label>
    <type>Date</type>
</CustomField>