force-app/main/default/objects/Passenger__c/fields/Flight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Flight_Destination__c</fullName>
    <formula>FlightId__r.Destination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Destination</label>
    <type>Text</type>
</CustomField>