force-app/main/default/objects/Passenger__c/fields/Flight_Leg__c.field-meta.xml
<CustomField>
    <fullName>Flight_Leg__c</fullName>
    <formula>TEXT(FlightId__r.Leg_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Leg</label>
    <type>Text</type>
</CustomField>