force-app/main/default/objects/Passenger__c/fields/Flight_Master__c.field-meta.xml
<CustomField>
    <fullName>Flight_Master__c</fullName>
    <description>Flight Master used for group LEG by the same flight date and flight number, Example data = TG676_16OCT16</description>
    <label>Flight Master</label>
    <length>255</length>
    <type>Text</type>
</CustomField>