force-app/main/default/objects/Passenger__c/fields/Flight_Name__c.field-meta.xml
<CustomField>
    <fullName>Flight_Name__c</fullName>
    <description>Used for New Case Custom Button</description>
    <formula>FlightId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Number</label>
    <type>Text</type>
</CustomField>