force-app/main/default/objects/Passenger__c/fields/Flight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Flight_Origin__c</fullName>
    <formula>FlightId__r.Origin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Origin</label>
    <type>Text</type>
</CustomField>