force-app/main/default/objects/Passenger__c/fields/Flight_Routing_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Routing_F__c</fullName>
    <formula>Sector__c &amp; ' ' &amp;
'STA/ETD: ' &amp;  FlightId__r.STD__c &amp; '/' &amp;  FlightId__r.ETD__c &amp; ' ' &amp;
'ATA: ' &amp;  FlightId__r.ATA__c &amp; ' ' &amp; 
'Flying Time: ' &amp;  FlightId__r.Flying_Time_Elapsed_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Routing</label>
    <type>Text</type>
</CustomField>