force-app/main/default/objects/Passenger__c/fields/Flight_STD__c.field-meta.xml
<CustomField>
    <fullName>Flight_STD__c</fullName>
    <formula>FlightId__r.STD_LT_DateTime__c</formula>
    <label>Flight STD</label>
    <type>DateTime</type>
</CustomField>