force-app/main/default/objects/Passenger__c/fields/FlightId__c.field-meta.xml
<CustomField>
    <fullName>FlightId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight Number</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>Lookup</type>
</CustomField>