force-app/main/default/objects/Passenger__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name (Clarify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>