force-app/main/default/objects/Passenger__c/fields/IgnoreProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>IgnoreProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag used for controlling process builder.
To prevent process builder execute while inserting new PAX.</description>
    <label>IgnoreProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>