force-app/main/default/objects/Passenger__c/fields/Infant__c.field-meta.xml
<CustomField>
    <fullName>Infant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infant</label>
    <type>Checkbox</type>
</CustomField>