force-app/main/default/objects/Passenger__c/fields/Infant_Age__c.field-meta.xml
<CustomField>
    <fullName>Infant_Age__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
TEXT(FLOOR( 
(( (YEAR( TODAY()) * 12)+ MONTH(TODAY())) 
- ( 
(YEAR( Infant_Date_of_Birth_Date__c ) * 12) 
+ MONTH( Infant_Date_of_Birth_Date__c ) 
))/12) 
) + ' year(s) ' + 
TEXT(MOD( 
(( (YEAR( TODAY()) * 12)+ MONTH(TODAY())) 
- ( 
(YEAR ( Infant_Date_of_Birth_Date__c ) * 12) 
+ MONTH( Infant_Date_of_Birth_Date__c ) 
)),12) 
) + ' month(s)' 
, ' 0 month(s)', '') 
, ' year(s) month(s)', 'N/A')</formula>
    <label>Infant Age</label>
    <type>Text</type>
</CustomField>