force-app/main/default/objects/Passenger__c/fields/Infant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Infant_Date_of_Birth__c</fullName>
    <label>Infant Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>