force-app/main/default/objects/Passenger__c/fields/Infant_Date_of_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Infant_Date_of_Birth_Date__c</fullName>
    <formula>DATEVALUE( Infant_Date_of_Birth__c )</formula>
    <label>Infant Date of Birth Date</label>
    <type>Date</type>
</CustomField>