force-app/main/default/objects/Passenger__c/fields/Infant_Name__c.field-meta.xml
<CustomField>
    <fullName>Infant_Name__c</fullName>
    <label>Infant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>