force-app/main/default/objects/Passenger__c/fields/Is_Accepted_Seat__c.field-meta.xml
<CustomField>
    <fullName>Is_Accepted_Seat__c</fullName>
    <formula>IF( Checkin_Seat__c = ""  , "Booking", "Accepted")</formula>
    <label>Is Accepted Seat</label>
    <type>Text</type>
</CustomField>