force-app/main/default/objects/Passenger__c/fields/Last_Change_Seat_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Seat_DateTime__c</fullName>
    <label>Last Change Seat Date/Time</label>
    <type>DateTime</type>
</CustomField>