force-app/main/default/objects/Passenger__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Used for display</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>