force-app/main/default/objects/Passenger__c/fields/Match_with_ROP__c.field-meta.xml
<CustomField>
    <fullName>Match_with_ROP__c</fullName>
    <description>Check if the passenger is ROP member with matching last name and date of birth</description>
    <formula>AND(FFP_Carrier__c == 'TG', AccountId__r.ROP_Number__c != null, AccountId__c != null, AccountId__r.Last_Name__c == Last_Name__c, AccountId__r.Date_of_Birth__c == Date_of_Birth_Input__c)</formula>
    <label>Match with ROP</label>
    <type>Checkbox</type>
</CustomField>