force-app/main/default/objects/Passenger__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile (Clarify)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>