force-app/main/default/objects/Passenger__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality for Integration and Ground</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>