force-app/main/default/objects/Passenger__c/fields/Nationality_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Fullname__c</fullName>
    <description>Display Nationality Full name, for In-Flight and Customer Service</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>