force-app/main/default/objects/Passenger__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <formula>IF(   FlightId__r.STD_LT_DateTime__c   - ( NOW() + 420/1440 )  &lt;= 0.03125 &amp;&amp; Checkin_Seat__c = "", TRUE, FALSE)</formula>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>