force-app/main/default/objects/Passenger__c/fields/Off_Point__c.field-meta.xml
<CustomField>
    <fullName>Off_Point__c</fullName>
    <label>Off Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>