force-app/main/default/objects/Passenger__c/fields/Outbound__c.field-meta.xml
<CustomField>
    <fullName>Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound</label>
    <type>Checkbox</type>
</CustomField>