force-app/main/default/objects/Passenger__c/fields/Passenger_First_Name_Auto__c.field-meta.xml
<CustomField>
    <fullName>Passenger_First_Name_Auto__c</fullName>
    <label>Passenger First Name Auto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>