force-app/main/default/objects/Passenger__c/fields/Passenger_Name_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name_Formatted__c</fullName>
    <label>Passenger Name Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>