force-app/main/default/objects/Passenger__c/fields/Passenger_Salutation_Auto__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Salutation_Auto__c</fullName>
    <description>This field stores the value of salutation of this passenger which is the result of automatic detection of salutation from passenger's first name.</description>
    <label>Passenger Salutation Auto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>