force-app/main/default/objects/Passenger__c/fields/Pax_Key_txt__c.field-meta.xml
<CustomField>
    <fullName>Pax_Key_txt__c</fullName>
    <description>Text version of PaxKey__c</description>
    <externalId>true</externalId>
    <label>Pax Key txt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>