force-app/main/default/objects/Passenger__c/fields/PaxKey__c.field-meta.xml
<CustomField>
    <fullName>PaxKey__c</fullName>
    <formula>First_Name__c &amp; '_' &amp;  Last_Name__c &amp; '_' &amp;  PNR__c &amp; '_' &amp; Flight_Master__c</formula>
    <label>PaxKey</label>
    <type>Text</type>
</CustomField>