force-app/main/default/objects/Passenger__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <label>Postal Address</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>