force-app/main/default/objects/Passenger__c/fields/RBD_Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>RBD_Travel_Class__c</fullName>
    <formula>IF( Booking_Class__c = "G", "G",   Cabin_Code__c  )</formula>
    <label>RBD Travel Class</label>
    <type>Text</type>
</CustomField>