force-app/main/default/objects/Passenger__c/fields/RBD_Travel_Class_SORT__c.field-meta.xml
<CustomField>
    <fullName>RBD_Travel_Class_SORT__c</fullName>
    <formula>CASE( RBD_Travel_Class__c , "F", "1-F", "C", "2-C", "U", "3-U", "Y", "4-Y", "G", "5-G", "")</formula>
    <label>RBD Travel Class (SORT)</label>
    <type>Text</type>
</CustomField>