force-app/main/default/objects/Passenger__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>