force-app/main/default/objects/Passenger__c/fields/ROP_KEY__c.field-meta.xml
<CustomField>
    <fullName>ROP_KEY__c</fullName>
    <description>ROP KEY</description>
    <externalId>true</externalId>
    <label>ROP_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>