force-app/main/default/objects/Passenger__c/fields/Route_Info__c.field-meta.xml
<CustomField>
    <fullName>Route_Info__c</fullName>
    <description>Used for debugging / verifying result of PaxFlowDetail_Batch and  Per Million report

Create report group by this field to validate passenger count</description>
    <formula>FlightId__r.Scheduling_Type__c &amp; "," &amp;
 FlightId__r.Flight_Region__c &amp; "," &amp;
 FlightId__r.Flight_Area__c &amp; "," &amp;
Cabin_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Info</label>
    <type>Text</type>
</CustomField>