force-app/main/default/objects/Passenger__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <formula>IF( Checkin_Seat__c != "",  Checkin_Seat__c ,  Booking_Seat__c )</formula>
    <label>Seat</label>
    <type>Text</type>
</CustomField>