force-app/main/default/objects/Passenger__c/fields/Second_Section__c.field-meta.xml
<CustomField>
    <fullName>Second_Section__c</fullName>
    <formula>IF(
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
)
>= 1200 &amp;&amp;
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
) &lt;= 2100

, TRUE,FALSE)</formula>
    <label>Second Section</label>
    <type>Checkbox</type>
</CustomField>