force-app/main/default/objects/Passenger__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Used to display. Information displayed is the origin and destination of the whole flight of the passenger</description>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>