force-app/main/default/objects/Passenger__c/fields/Sector_with_Class__c.field-meta.xml
<CustomField>
    <fullName>Sector_with_Class__c</fullName>
    <formula>Sector__c &amp; " " &amp; "(" &amp; Cabin_Code__c &amp; ")"</formula>
    <label>Sector with Class</label>
    <type>Text</type>
</CustomField>