force-app/main/default/objects/Passenger__c/fields/Segment_Status__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status__c</fullName>
    <label>Segment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>