force-app/main/default/objects/Passenger__c/fields/Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_Data__c</fullName>
    <description>Source of data. web service ? 
Example data :WEB_SERVICE.</description>
    <label>Source Data</label>
    <length>25</length>
    <type>Text</type>
</CustomField>