force-app/main/default/objects/Passenger__c/fields/Special_Meal__c.field-meta.xml
<CustomField>
    <fullName>Special_Meal__c</fullName>
    <label>Special Meal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>