force-app/main/default/objects/Passenger__c/fields/SSR__c.field-meta.xml
<CustomField>
    <fullName>SSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSR</label>
    <type>Checkbox</type>
</CustomField>