force-app/main/default/objects/Passenger__c/fields/SSR_Service__c.field-meta.xml
<CustomField>
    <fullName>SSR_Service__c</fullName>
    <label>Service</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>