force-app/main/default/objects/Passenger__c/fields/Staff_Booking__c.field-meta.xml
<CustomField>
    <fullName>Staff_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Booking</label>
    <type>Checkbox</type>
</CustomField>