force-app/main/default/objects/Passenger__c/fields/Staff_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Staff_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Waitlist</label>
    <type>Checkbox</type>
</CustomField>