force-app/main/default/objects/Passenger__c/fields/test_datetime__c.field-meta.xml
<CustomField>
    <fullName>test_datetime__c</fullName>
    <formula>NOW() + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test datetime</label>
    <type>DateTime</type>
</CustomField>