force-app/main/default/objects/Passenger__c/fields/Third_Section__c.field-meta.xml
<CustomField>
    <fullName>Third_Section__c</fullName>
    <formula>IF(
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
)
>= 2100 ||
(  
( 

IF(

LEFT(TEXT(Flight_STD__c), 10) = LEFT(TEXT(NOW()+ 1), 10)





,TRUE, FALSE)

&amp;&amp;
VALUE(
SUBSTITUTE(
TRIM
(
MID

(TEXT( Flight_STD__c ),
FIND
(":", TEXT( Flight_STD__c ))


 - 2, 5)
)
, ":","")
) &lt;= 200)
)
, TRUE,FALSE)</formula>
    <label>Third Section</label>
    <type>Checkbox</type>
</CustomField>