force-app/main/default/objects/Passenger__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket</label>
    <type>Checkbox</type>
</CustomField>