force-app/main/default/objects/Passenger__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>