force-app/main/default/objects/Passenger__c/fields/Travel_Class_F__c.field-meta.xml
<CustomField>
    <fullName>Travel_Class_F__c</fullName>
    <formula>CASE( Class__c , "F", "First", "C", "Business","U","Premium Economy","Y","Economy","")</formula>
    <label>Travel Class</label>
    <type>Text</type>
</CustomField>