force-app/main/default/objects/Passenger__c/fields/Travel_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Travel_Document_Number__c</fullName>
    <description>Used for display</description>
    <label>Travel Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>