force-app/main/default/objects/Passenger__c/fields/VIP_VVIP_Flag__c.field-meta.xml
<CustomField>
    <fullName>VIP_VVIP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP/VVIP Flag</label>
    <type>Checkbox</type>
</CustomField>