force-app/main/default/objects/Passenger__c/fields/WS_KEY__c.field-meta.xml
<CustomField>
    <fullName>WS_KEY__c</fullName>
    <description>Flight number + Flight date + RLOC + First name + Last name</description>
    <externalId>true</externalId>
    <label>WS KEY</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>