force-app/main/default/objects/Passenger__c/recordTypes/Ground_Service_Passenger.recordType-meta.xml
<RecordType>
    <fullName>Ground_Service_Passenger</fullName>
    <active>true</active>
    <label>Ground Service Passenger</label>
</RecordType>