force-app/main/default/objects/Passenger__c/recordTypes/New_Passenger.recordType-meta.xml
<RecordType>
    <fullName>New_Passenger</fullName>
    <active>true</active>
    <description>New Passenger</description>
    <label>New Passenger</label>
</RecordType>