force-app/main/default/objects/Passenger__c/listViews/All_Cabin_Class_not_Y.listView-meta.xml
<ListView>
    <fullName>All_Cabin_Class_not_Y</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>PNR__c</columns>
    <columns>FlightId__c</columns>
    <columns>FFP_Number__c</columns>
    <columns>FFP_Tier__c</columns>
    <columns>VIP_VVIP_Flag__c</columns>
    <columns>Checkin_Seat__c</columns>
    <columns>Cabin_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cabin_Code__c</field>
        <operation>equals</operation>
        <value>F,C,U</value>
    </filters>
    <label>All Cabin Class not Y</label>
    <language>en_US</language>
</ListView>