force-app/main/default/objects/Passenger__c/listViews/First_Class.listView-meta.xml
<ListView>
    <fullName>First_Class</fullName>
    <columns>NAME</columns>
    <columns>PNR__c</columns>
    <columns>FlightId__c</columns>
    <columns>FFP_Number__c</columns>
    <columns>FFP_Tier__c</columns>
    <columns>VIP_VVIP_Flag__c</columns>
    <columns>Checkin_Seat__c</columns>
    <columns>Cabin_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cabin_Code__c</field>
        <operation>equals</operation>
        <value>F</value>
    </filters>
    <label>First Class</label>
    <language>en_US</language>
    <sharedTo>
        <group>Ground_Service_Team</group>
        <role>Ground_Customer_Service_Abroad_Station</role>
    </sharedTo>
</ListView>